tests/mocks/success/http-server-without-middlewares-folder/app/routes/http-routes/test.js
'use strict';
module.exports = class Test {

  static get url() {
    return '/test';
  }

  static getMultipleRecords(req, res) {
    res.end('success');
  }

};
