tests/mocks/fail/http-middlewares/app/routes/http-routes/test.js
'use strict';
module.exports = class Test {

  static get url() {
    return '/test';
  }

  static getMultipleRecords(req, res) {
    return res.end(req.middleware);
  }
};
